Change `eol-conversion` for JJ on Windows
Set it to `input-output` by default since I use JJ with Git at the moment. This might change in the future.

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -16,3 +16,8 @@ default-command = "log"
 [user]
 name = "Morgan Courbet"
 email = {{ .gitemail | quote }}
+
+[working-copy]
+{{ if eq .chezmoi.os "windows" -}}
+eol-conversion = "input-output"
+{{- end }}
