Add jj `lg` and `lga` aliases

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -5,6 +5,8 @@ d = ["describe"]
 dm = ["describe", "-m"]
 df = ["diff"]
 ed = ["edit"]
+lg = ["log"]
+lga = ["log", "--revisions", "::"]
 rb = ["rb"]
 sh = ["show"]
 sp = ["split"]
