Change jj short alias for `undo` to `ud`

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -10,7 +10,7 @@ lga = ["log", "--revisions", "::"]
 rb = ["rb"]
 sh = ["show"]
 sp = ["split"]
-u = ["undo"]
+ud = ["undo"]
 
 [ui]
 default-command = "log"
