Add jj alias for `git push`

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -8,6 +8,7 @@ dc = ["describe"]
 dcm = ["describe", "-m"]
 df = ["diff"]
 ed = ["edit"]
+gtp = ["git", "push"]
 lg = ["log"]
 lga = ["log", "--revisions", "::"]
 rb = ["rb"]
