Add jj `cim` alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -5,6 +5,7 @@ bk = ["bookmark"]
 bkm = ["bookmark", "move"]
 bkmt = ["bookmark", "move", "--to"]
 bkmtp = ["bookmark", "move", "--to", "@-"]
+cim = ["commit", "--message"]
 dc = ["describe"]
 dcm = ["describe", "-m"]
 df = ["diff"]
