Add jj `dcp` alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -8,6 +8,7 @@ bkmtp = ["bookmark", "move", "--to", "@-"]
 cim = ["commit", "--message"]
 dc = ["describe"]
 dcm = ["describe", "-m"]
+dcp = ["describe", "@-"]
 df = ["diff"]
 ed = ["edit"]
 gtp = ["git", "push"]
