Use long parameter name for `dcm` jj alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -7,7 +7,7 @@ bkmt = ["bookmark", "move", "--to"]
 bkmtp = ["bookmark", "move", "--to", "@-"]
 cim = ["commit", "--message"]
 dc = ["describe"]
-dcm = ["describe", "-m"]
+dcm = ["describe", "--message"]
 dcp = ["describe", "@-"]
 df = ["diff"]
 ed = ["edit"]
