--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -19,9 +19,9 @@
   "files.autoSave": "onFocusChange",
   "files.exclude": {
     "**/.classpath": true,
+    "**/.factorypath": true,
     "**/.project": true,
     "**/.settings": true,
-    "**/.factorypath": true
   },
   {{- if eq .usage "work" -}}"git.autofetch": true,{{- end}}
   "git.autofetchPeriod": 3600,
