Exclude `.jj/` repository in VS Code

--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -20,6 +20,7 @@
   "files.exclude": {
     "**/.classpath": true,
     "**/.factorypath": true,
+    "**/.jj": true,
     "**/.project": true,
     "**/.settings": true,
   },
