--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -14,6 +14,7 @@ ed = ["edit"]
 gtp = ["git", "push"]
 lg = ["log"]
 lga = ["log", "--revisions", "::"]
+lgav = ["log", "--revisions", "::", "--template", "builtin_log_detailed"]
 lgv = ["log", "--template", "builtin_log_detailed"]
 rb = ["rb"]
 sh = ["show"]
