Add `dfr` jj alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -10,6 +10,7 @@ dc = ["describe"]
 dcm = ["describe", "--message"]
 dcp = ["describe", "@-"]
 df = ["diff"]
+dfr = ["diff", "--revisions"]
 ed = ["edit"]
 gtp = ["git", "push"]
 lg = ["log"]
