Fix `rb` jj alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -18,7 +18,7 @@ lg = ["log"]
 lga = ["log", "--revisions", "::"]
 lgav = ["log", "--revisions", "::", "--template", "builtin_log_detailed"]
 lgv = ["log", "--template", "builtin_log_detailed"]
-rb = ["rb"]
+rb = ["rebase"]
 sh = ["show"]
 shp = ["show", "@-"]
 sp = ["split"]
