Add Zed to VS Code tasks

--- a/.chezmoitemplates/vscode/tasks.json
+++ b/.chezmoitemplates/vscode/tasks.json
@@ -50,5 +50,14 @@
       },
       "problemMatcher": [],
     },
+    {
+      "label": "Open directory in Zed",
+      "type": "shell",
+      "command": "zed --new ${workspaceFolder}",
+      "presentation": {
+        "reveal": "never"
+      },
+      "problemMatcher": [],
+    },
   ]
 }
