Do not autoupdate Zed

--- a/.chezmoitemplates/zed/settings.json
+++ b/.chezmoitemplates/zed/settings.json
@@ -7,7 +7,7 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "auto_update": true,
+  "auto_update": false,
   "autosave": "on_focus_change",
   "buffer_font_family": "CaskaydiaCove Nerd Font",
   "buffer_font_features": {
