Change `morgan/git-flow-next` to `versions/git-flow-next-pre`
See ScoopInstaller/Versions#2530

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -129,7 +129,7 @@ packages:
         - miniserve
         - mise
         - mob
-        - morgan/git-flow-next
+        - versions/git-flow-next-pre
         - neovide
         - neovim
         - notepadplusplus
