Zed: add private Git commits

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -28,6 +28,9 @@ ud = ["undo"]
 [colors]
 "timestamp ago" = { "fg" = "ansi-color-30", italic = true }
 
+[git]
+private-commits = "description(glob:'local:*') | description(glob:'private:*') | description(glob:'wip:*')"
+
 [template-aliases]
 'format_timestamp(ts)' = 'ts.ago() ++ " " ++ ts.local().format("%c")'
 
