jj: add `rbd` alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -20,6 +20,7 @@ lga = ["log", "--revisions", "::"]
 lgav = ["log", "--revisions", "::", "--template", "builtin_log_detailed"]
 lgv = ["log", "--template", "builtin_log_detailed"]
 rb = ["rebase"]
+rbd = ["rebase", "--destination"]
 sh = ["show"]
 shp = ["show", "@-"]
 sp = ["split"]
