alacritty: fix font family

--- a/.chezmoitemplates/alacritty/alacritty.toml
+++ b/.chezmoitemplates/alacritty/alacritty.toml
@@ -2,7 +2,7 @@
 size = 12
 
 [font.normal]
-family = "Cascadia Code NF"
+family = "CaskaydiaCove Nerd Font"
 
 {{ if eq .chezmoi.os "darwin" -}}
 [terminal.shell]
