jj: add `gt` alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -14,6 +14,7 @@ df = ["diff"]
 dfp = ["diff", "--revisions", "@-"]
 dfr = ["diff", "--revisions"]
 ed = ["edit"]
+gt = ["git"]
 gtp = ["git", "push"]
 lg = ["log"]
 lga = ["log", "--revisions", "::"]
