jj: add `cii` alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -6,6 +6,7 @@ bkc = ["bookmark", "create"]
 bkm = ["bookmark", "move"]
 bkmt = ["bookmark", "move", "--to"]
 bkmtp = ["bookmark", "move", "--to", "@-"]
+cii = ["commit", "--interactive"]
 cim = ["commit", "--message"]
 dc = ["describe"]
 dcm = ["describe", "--message"]
