jj: add `gtf` alias

--- a/.chezmoitemplates/jj/config.toml
+++ b/.chezmoitemplates/jj/config.toml
@@ -16,6 +16,7 @@ dfp = ["diff", "--revisions", "@-"]
 dfr = ["diff", "--revisions"]
 ed = ["edit"]
 gt = ["git"]
+gtf = ["git", "fetch"]
 gtp = ["git", "push"]
 lg = ["log"]
 lga = ["log", "--revisions", "::"]
