scoop: add `moor`

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -134,6 +134,7 @@ packages:
         - miniserve
         - mise
         - mob
+        - moor
         - versions/git-flow-next-pre
         - neovide
         - neovim
