--- a/.chezmoidata.yaml
+++ b/.chezmoidata.yaml
@@ -1,3 +1,3 @@
 envvars:
   less: --ignore-case --jump-target=5 --quit-if-one-screen --RAW-CONTROL-CHARS --shift=.2 --use-color
-  pager: less
+  pager: moor
