--- a/.chezmoidata.yaml
+++ b/.chezmoidata.yaml
@@ -1,3 +1,4 @@
 envvars:
   less: --ignore-case --jump-target=5 --quit-if-one-screen --RAW-CONTROL-CHARS --shift=.2 --use-color
+  moor: -no-linenumbers -quit-if-one-screen
   pager: moor
