--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -158,6 +158,7 @@ packages:
         - tokei
         - topgrade
         - twinkle-tray
+        - uutils-coreutils
         - vim
         - vlc
         - vscode
