zed: change file type for Go Templates

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,5 +1,5 @@
 {
   "file_types": {
-    "Go Text Template": ["*/.chezmoitemplates/**/*.json", "**.tmpl"]
+    "Go Text Template": ["*/.chezmoitemplates/**", "**.tmpl"]
   }
 }
